--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(group_upgma)
 export(haldane)
 export(keep_only_selected_mks)
 export(kosambi)
+export(load_onemap_sequences)
 export(make_seq)
 export(map)
 export(map_avoid_unlinked)
@@ -73,6 +74,7 @@ export(rf_graph_table)
 export(rf_snp_filter_onemap)
 export(ripple_seq)
 export(rm_dupli_mks)
+export(save_onemap_sequences)
 export(seeded_map)
 export(select_segreg)
 export(seq_by_type)
